--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="robots" content="index, follow">
-  <title>Document</title>
+  <title>SoundCloud</title>
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
+
+  
 
   <script src="js/script.min.js"></script>
 </body>
