--- a/src/index.html
+++ b/src/index.html
@@ -49,12 +49,207 @@
   </svg>
 
 
-  
+  <header class="header">
+    <div class="menu">
+      <b class="menu__title">Menu</b>
+
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a class="menu__link" href="#welcome">Welcome</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#features">Features</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#subscribe">Subscribe</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#prices">Prices</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#tweets">Tweets</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#screenshots">Screenshots</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#apps">Apps</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#contacts">Contacts</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
 
-<!--   <svg class="test" height="17" width="17">
-  <use xlink:href="#windows"></use>
-</svg> -->
+  <section class="welcome" id="welcome">
+    <h1 class="welcome__title">SoundCloud</h1>
+
+    <p class="welcome__text">Here is the best way to present your apps!</p>
+
+    <p class="welcome__subtitle">Available on App Store, Play Store and Windows Store</p>
+
+    <button class="btn" type="button">Learn more</button>
+    <a class="btn" href="#">Download</a>
+  </section>
+
+
+  <section class="features" id="features">
+    <h2 class="features__title">Amazing Features</h2>
+    <p class="features__subtitle">Ready to start!...Simple, etffective and easy to use</p>
+
+    <div class="features__content">
+      <ul class="features__list features__list--left">
+        <li class="features__item">
+          <b class="fetures__item-title">Material Design</b>
+          <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </li>
+
+        <li class="features__item">
+          <b class="fetures__item-title">New Music Bars</b>
+          <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </li>
+      </ul>
+
+      <img class="features__image" width="247" height="428" src="img/features.jpg" alt="Picture SoundCloud Explore">
+
+      <ul class="features__list features__list--right">
+        <li class="features__item">
+          <b class="fetures__item-title">Upload Music</b>
+          <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </li>
+
+        <li class="features__item">
+          <b class="fetures__item-title">Mini Playing Screen</b>
+          <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+
+  <section class="subscribe" id="subscribe">
+    <h2 class="subscribe__title">Subscribe to our newsletter</h2>
+    <p class="subscribe__subtitle">No spam promise - only our latest news and freebies!</p>
+
+    <form action="#" class="subscribe__form">
+      <input type="text" class="subscribe__email">your email address</input>
+
+      <button class="btn" type="submit">Airplane</button>
+    </form>
+  </section>
+
+
+  <section class="prices" id="prices">
+    <h2 class="prices__title">Great Pricess</h2>
+    <p class="prices__subtitle">Ready to start!...Lorem Ipsum is simply dummy text</p>
+
+    <ul class="prices__list">
+      <li class="prices__item">
+        <h3 class="prices__name">STARTED</h3>
+        <p class="prices__price">$ 9.99</p>
+        <p class="prices__desc">06 Months support<br>06 Months support<br>06 Months support</p>
+        <button class="btn" type="button">Buy now</button>
+      </li>
+
+      <li class="prices__item">
+        <h3 class="prices__name">PREMIUM</h3>
+        <p class="prices__price">$ 25.99</p>
+        <p class="prices__desc">12 Months support<br>12 Months support<br>12 Months support</p>
+        <button class="btn" type="button">Buy the most popular</button>
+      </li>
+
+      <li class="prices__item">
+        <h3 class="prices__name">ENTERPRISE</h3>
+        <p class="prices__price">$ 99.99</p>
+        <p class="prices__desc">Unlimited  support<br>Unlimited  support<br>Unlimited  support</p>
+        <button class="btn" type="button">Buy now</button>
+      </li>
+    </ul>
+  </section>
+
+
+  <section class="tweets" id="tweets">
+    <h2 class="tweets__title">Check Out Our Latest Tweets</h2>
+    <p class="tweets__subtitle">Feel free to check out our latest news from twitter</p>
+
+    <ul class="tweets__list">
+      <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+      <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+      <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+    </ul>
+
+    <button class="btn" type="button">Show More</button>
+  </section>
+
+
+  <section class="screenshots">
+    <h2 class="screenshots__title">Show Your Awesome Screenshots</h2>
+    <p class="screenshots__subtitle">App Screens!...Lorem Ipsum is simply dummy text</p>
+
+    <div class="screenshots__slider">
+      <div class="screenshots__frame">
+        <ul class="screenshots__list">
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="228" height="395" src="img/screenshot1.jpg" alt="Picture SoundCloud get started">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="228" height="395" src="img/screenshot2.jpg" alt="Picture SoundCloud get started">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="228" height="395" src="img/screenshot3.jpg" alt="Picture SoundCloud get started">
+          </li>
+        </ul>
+      </div>
+
+      <div class="screenshots__toggles">
+        <button class="screenshots__toggle screenshots__toggle--prev" type="button">Prev</button>
+        <button class="screenshots__toggle screenshots__toggle--next" type="button">Next</button>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="apps">
+    <h2 class="apps__title">Download SoundCloud App</h2>
+
+    <a class="btn btn--app" href="#">App Store</a>
+    <a class="btn btn--app" href="#">Play Store</a>
+    <a class="btn btn--app" href="#">Windows Store</a>
+  </section>
+
+
+  <section class="contacts">
+    <h2 class="contacts__title">SoundCloud</h2>
+
+    <div class="contacts__social">
+      <a class="contacts__link contacts__link--behance" href="#">
+        <svg class="contacts__image" width="35" height="22">
+          <use xlink:href="#behance"></use>
+        </svg>
+      </a>
+      <a class="contacts__link contacts__link--facebook" href="#">
+        <svg class="contacts__image" width="15" height="27">
+          <use xlink:href="#facebook"></use>
+        </svg>
+      </a>
+      <a class="contacts__link contacts__link--twitter" href="#">
+        <svg class="contacts__image" width="30" height="24">
+          <use xlink:href="#twitter"></use>
+        </svg>
+      </a>
+      <a class="contacts__link contacts__link--pinterest" href="#">
+        <svg class="contacts__image" width="27" height="27">
+          <use xlink:href="#pinterest"></use>
+        </svg>
+      </a>
+    </div>
+
+    <p class="contacts__copyright">Copyright@SoundCloud</p>
+  </section>
 
 
   <script src="js/script.min.js"></script>
