файлы для блоков

--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
       </a>
     </div>
 
-    <p class="contacts__copyright">Copyright@SoundCloud</p>
+    <p class="contacts__copyright">Copyright&copy;SoundCloud</p>
   </section>
 
 
