скриншоты из программы

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
         </li>
       </ul>
 
-      <img class="features__image" width="247" height="428" src="img/features.jpg" alt="Picture SoundCloud Explore">
+      <img class="features__image" width="241" height="428" src="img/features.jpg" alt="Picture SoundCloud Explore">
 
       <ul class="features__list features__list--right">
         <li class="features__item">
@@ -192,15 +192,47 @@
       <div class="screenshots__frame">
         <ul class="screenshots__list">
           <li class="screenshots__item">
-            <img class="screenshots__image" width="228" height="395" src="img/screenshot1.jpg" alt="Picture SoundCloud get started">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot1.jpg" alt="SoundCloud Screenshot Astrid S">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="228" height="395" src="img/screenshot2.jpg" alt="Picture SoundCloud get started">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot2.jpg" alt="SoundCloud Screenshot #pop">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="228" height="395" src="img/screenshot3.jpg" alt="Picture SoundCloud get started">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot3.jpg" alt="SoundCloud Screenshot get started">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot4.jpg" alt="SoundCloud Screenshot Back on road">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot5.jpg" alt="SoundCloud Screenshot playlist">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot6.jpg" alt="SoundCloud Screenshot Sia ft Sean Paul">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot7.jpg" alt="SoundCloud Screenshot Explore">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot8.jpg" alt="SoundCloud Screenshot S3RL">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot9.jpg" alt="SoundCloud Screenshot Liked">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot10.jpg" alt="SoundCloud Screenshot Kyolo">
+          </li>
+
+          <li class="screenshots__item">
+            <img class="screenshots__image" width="241" height="428" src="img/screenshot11.jpg" alt="SoundCloud Screenshot Search">
           </li>
         </ul>
       </div>
