--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 
 
   <header class="header">
-    <div class="menu">
+    <div class="menu menu--close">
       <b class="menu__title">Menu</b>
 
       <ul class="menu__list">
@@ -73,7 +73,7 @@
           <a class="menu__link" href="#screenshots">Screenshots</a>
         </li>
         <li class="menu__item">
-          <a class="menu__link" href="#apps">Apps</a>
+          <a class="menu__link" href="#download">Download</a>
         </li>
         <li class="menu__item">
           <a class="menu__link" href="#contacts">Contacts</a>
@@ -84,107 +84,117 @@
 
 
   <section class="welcome" id="welcome">
-    <h1 class="welcome__title">SoundCloud</h1>
+    <div class="welcome__wrapper">
+      <h1 class="welcome__title">SoundCloud</h1>
 
-    <p class="welcome__text">Here is the best way to present your apps!</p>
+      <p class="welcome__text">Here is the best way to present your apps!</p>
 
-    <p class="welcome__subtitle">Available on App Store, Play Store and Windows Store</p>
+      <p class="welcome__subtitle">Available on App Store, Play Store and Windows Store</p>
 
-    <button class="btn" type="button">Learn more</button>
-    <a class="btn" href="#">Download</a>
+      <button class="btn" type="button">Learn more</button>
+      <a class="btn" href="#">Download</a>
+    </div>
   </section>
 
 
   <section class="features" id="features">
-    <h2 class="features__title">Amazing Features</h2>
-    <p class="features__subtitle">Ready to start!...Simple, etffective and easy to use</p>
+    <div class="features__wrapper">
+      <h2 class="features__title">Amazing Features</h2>
+      <p class="features__subtitle">Ready to start!...Simple, etffective and easy to use</p>
 
-    <div class="features__content">
-      <ul class="features__list features__list--left">
-        <li class="features__item">
-          <b class="fetures__item-title">Material Design</b>
-          <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      <div class="features__content">
+        <ul class="features__list features__list--left">
+          <li class="features__item">
+            <b class="fetures__item-title">Material Design</b>
+            <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          </li>
+
+          <li class="features__item">
+            <b class="fetures__item-title">New Music Bars</b>
+            <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          </li>
+        </ul>
+
+        <img class="features__image" width="241" height="428" src="img/features.jpg" alt="Picture SoundCloud Explore">
+
+        <ul class="features__list features__list--right">
+          <li class="features__item">
+            <b class="fetures__item-title">Upload Music</b>
+            <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          </li>
+
+          <li class="features__item">
+            <b class="fetures__item-title">Mini Playing Screen</b>
+            <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="subscribe" id="subscribe">
+    <div class="subscribe__wrapper">
+      <h2 class="subscribe__title">Subscribe to our newsletter</h2>
+      <p class="subscribe__subtitle">No spam promise - only our latest news and freebies!</p>
+
+      <form class="subscribe__form" action="#" method="post">
+        <input class="subscribe__email" name="email" type="text" placeholder="your email address">
+
+        <button class="btn btn--submit" type="submit">Airplane</button>
+      </form>
+    </div>
+  </section>
+
+
+  <section class="prices" id="prices">
+    <div class="prices__wrapper">
+      <h2 class="prices__title">Great Pricess</h2>
+      <p class="prices__subtitle">Ready to start!...Lorem Ipsum is simply dummy text</p>
+
+      <ul class="prices__list">
+        <li class="prices__item">
+          <h3 class="prices__name">STARTED</h3>
+          <p class="prices__price">$ 9.99</p>
+          <p class="prices__desc">06 Months support<br>06 Months support<br>06 Months support</p>
+          <button class="btn" type="button">Buy now</button>
         </li>
 
-        <li class="features__item">
-          <b class="fetures__item-title">New Music Bars</b>
-          <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </li>
-      </ul>
-
-      <img class="features__image" width="241" height="428" src="img/features.jpg" alt="Picture SoundCloud Explore">
-
-      <ul class="features__list features__list--right">
-        <li class="features__item">
-          <b class="fetures__item-title">Upload Music</b>
-          <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <li class="prices__item">
+          <h3 class="prices__name">PREMIUM</h3>
+          <p class="prices__price">$ 25.99</p>
+          <p class="prices__desc">12 Months support<br>12 Months support<br>12 Months support</p>
+          <button class="btn" type="button">Buy the most popular</button>
         </li>
 
-        <li class="features__item">
-          <b class="fetures__item-title">Mini Playing Screen</b>
-          <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <li class="prices__item">
+          <h3 class="prices__name">ENTERPRISE</h3>
+          <p class="prices__price">$ 99.99</p>
+          <p class="prices__desc">Unlimited  support<br>Unlimited  support<br>Unlimited  support</p>
+          <button class="btn" type="button">Buy now</button>
         </li>
       </ul>
     </div>
   </section>
 
 
-  <section class="subscribe" id="subscribe">
-    <h2 class="subscribe__title">Subscribe to our newsletter</h2>
-    <p class="subscribe__subtitle">No spam promise - only our latest news and freebies!</p>
-
-    <form action="#" class="subscribe__form">
-      <input type="text" class="subscribe__email">your email address</input>
-
-      <button class="btn" type="submit">Airplane</button>
-    </form>
-  </section>
-
-
-  <section class="prices" id="prices">
-    <h2 class="prices__title">Great Pricess</h2>
-    <p class="prices__subtitle">Ready to start!...Lorem Ipsum is simply dummy text</p>
-
-    <ul class="prices__list">
-      <li class="prices__item">
-        <h3 class="prices__name">STARTED</h3>
-        <p class="prices__price">$ 9.99</p>
-        <p class="prices__desc">06 Months support<br>06 Months support<br>06 Months support</p>
-        <button class="btn" type="button">Buy now</button>
-      </li>
-
-      <li class="prices__item">
-        <h3 class="prices__name">PREMIUM</h3>
-        <p class="prices__price">$ 25.99</p>
-        <p class="prices__desc">12 Months support<br>12 Months support<br>12 Months support</p>
-        <button class="btn" type="button">Buy the most popular</button>
-      </li>
-
-      <li class="prices__item">
-        <h3 class="prices__name">ENTERPRISE</h3>
-        <p class="prices__price">$ 99.99</p>
-        <p class="prices__desc">Unlimited  support<br>Unlimited  support<br>Unlimited  support</p>
-        <button class="btn" type="button">Buy now</button>
-      </li>
-    </ul>
-  </section>
-
-
   <section class="tweets" id="tweets">
-    <h2 class="tweets__title">Check Out Our Latest Tweets</h2>
-    <p class="tweets__subtitle">Feel free to check out our latest news from twitter</p>
+    <div class="tweets__wrapper">
+      <h2 class="tweets__title">Check Out Our Latest Tweets</h2>
+      <p class="tweets__subtitle">Feel free to check out our latest news from twitter</p>
 
-    <ul class="tweets__list">
-      <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
-      <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
-      <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
-    </ul>
+      <ul class="tweets__list">
+        <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+        <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+        <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+      </ul>
 
-    <button class="btn" type="button">Show More</button>
+      <button class="btn" type="button">Show More</button>
+    </div>
   </section>
 
 
-  <section class="screenshots">
+  <section class="screenshots" id="screenshots">
     <h2 class="screenshots__title">Show Your Awesome Screenshots</h2>
     <p class="screenshots__subtitle">App Screens!...Lorem Ipsum is simply dummy text</p>
 
@@ -245,16 +255,18 @@
   </section>
 
 
-  <section class="apps">
-    <h2 class="apps__title">Download SoundCloud App</h2>
+  <section class="download" id="download">
+    <div class="download__wrapper">
+      <h2 class="download__title">Download SoundCloud App</h2>
 
-    <a class="btn btn--app" href="#">App Store</a>
-    <a class="btn btn--app" href="#">Play Store</a>
-    <a class="btn btn--app" href="#">Windows Store</a>
+      <a class="btn btn--app" href="#">App Store</a>
+      <a class="btn btn--app" href="#">Play Store</a>
+      <a class="btn btn--app" href="#">Windows Store</a>
+    </div>
   </section>
 
 
-  <section class="contacts">
+  <section class="contacts" id="contacts">
     <h2 class="contacts__title">SoundCloud</h2>
 
     <div class="contacts__social">
