декоративное оформдение меню

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
-
-
   <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
     <symbol id="airplane" width="27.593" height="25.47" viewBox="0 0 27.593 25.47">
       <path d="M933.4,1604.11a0.425,0.425,0,0,0-.446-0.06l-26.774,12.39a0.414,0.414,0,0,0-.238.37,0.419,0.419,0,0,0,.23.38l7.577,3.7a0.415,0.415,0,0,0,.429-0.04l7.367-5.49-5.783,5.93a0.417,0.417,0,0,0-.116.32l0.576,7.47a0.406,0.406,0,0,0,.282.36,0.577,0.577,0,0,0,.129.02,0.42,0.42,0,0,0,.313-0.14l4.021-4.65,4.972,2.37a0.45,0.45,0,0,0,.342.01,0.412,0.412,0,0,0,.229-0.26l7.011-22.24A0.421,0.421,0,0,0,933.4,1604.11Z" transform="translate(-905.938 -1604)"/>
@@ -50,8 +48,8 @@
 
 
   <header class="header">
-    <div class="menu menu--close">
-      <b class="menu__title">Menu</b>
+    <nav class="menu">
+      <button class="menu__trigger" type="button">Menu<span></span></button>
 
       <ul class="menu__list">
         <li class="menu__item">
@@ -79,7 +77,7 @@
           <a class="menu__link" href="#contacts">Contacts</a>
         </li>
       </ul>
-    </div>
+    </nav>
   </header>
 
 
