декоративное оформление приветствия

--- a/src/index.html
+++ b/src/index.html
@@ -89,8 +89,8 @@
 
       <p class="welcome__subtitle">Available on App Store, Play Store and Windows Store</p>
 
-      <button class="btn" type="button">Learn more</button>
-      <a class="btn" href="#">Download</a>
+      <a class="btn btn--more" href="#features">Learn more</a>
+      <a class="btn btn--download" href="#download">Download</a>
     </div>
   </section>
 
