декоративное оформление преимуществ

--- a/src/index.html
+++ b/src/index.html
@@ -103,27 +103,39 @@
       <div class="features__content">
         <ul class="features__list features__list--left">
           <li class="features__item">
-            <b class="fetures__item-title">Material Design</b>
+            <b class="features__item-title">Material Design</b>
             <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <svg class="features__icon" width="26" height="26">
+              <use xlink:href="#arrows"></use>
+            </svg>
           </li>
 
-          <li class="features__item">
-            <b class="fetures__item-title">New Music Bars</b>
+          <li class="features__item features__item--check">
+            <b class="features__item-title">New Music Bars</b>
             <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <svg class="features__icon" width="24" height="24">
+              <use xlink:href="#check"></use>
+            </svg>
           </li>
         </ul>
 
         <img class="features__image" width="241" height="428" src="img/features.jpg" alt="Picture SoundCloud Explore">
 
         <ul class="features__list features__list--right">
-          <li class="features__item">
-            <b class="fetures__item-title">Upload Music</b>
+          <li class="features__item features__item--upload">
+            <b class="features__item-title">Upload Music</b>
             <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <svg class="features__icon features__icon--upload" width="23" height="23">
+              <use xlink:href="#upload"></use>
+            </svg>
           </li>
 
-          <li class="features__item">
-            <b class="fetures__item-title">Mini Playing Screen</b>
+          <li class="features__item features__item--mini">
+            <b class="features__item-title">Mini Playing Screen</b>
             <p class="features__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <svg class="features__icon features__icon--mini" width="28" height="30">
+              <use xlink:href="#mini"></use>
+            </svg>
           </li>
         </ul>
       </div>
