декоративное оформление подписка

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,11 @@
       <form class="subscribe__form" action="#" method="post">
         <input class="subscribe__email" name="email" type="text" placeholder="your email address">
 
-        <button class="btn btn--submit" type="submit">Airplane</button>
+        <button class="btn btn--submit" type="submit">Airplane
+          <svg class="subscribe__icon" width="27" height="25">
+            <use xlink:href="#airplane"></use>
+          </svg>
+        </button>
       </form>
     </div>
   </section>
