декоративное оформление цены

--- a/src/index.html
+++ b/src/index.html
@@ -169,23 +169,23 @@
       <ul class="prices__list">
         <li class="prices__item">
           <h3 class="prices__name">STARTED</h3>
-          <p class="prices__price">$ 9.99</p>
+          <p class="prices__price"><span class="prices__symbol">$</span> 9.99</p>
           <p class="prices__desc">06 Months support<br>06 Months support<br>06 Months support</p>
-          <button class="btn" type="button">Buy now</button>
+          <button class="btn btn--buy" type="button">Buy now</button>
         </li>
 
         <li class="prices__item">
           <h3 class="prices__name">PREMIUM</h3>
-          <p class="prices__price">$ 25.99</p>
+          <p class="prices__price"><span class="prices__symbol">$</span> 25.99</p>
           <p class="prices__desc">12 Months support<br>12 Months support<br>12 Months support</p>
-          <button class="btn" type="button">Buy the most popular</button>
+          <button class="btn btn--buy btn--popular" type="button">Buy the most popular</button>
         </li>
 
         <li class="prices__item">
           <h3 class="prices__name">ENTERPRISE</h3>
-          <p class="prices__price">$ 99.99</p>
+          <p class="prices__price"><span class="prices__symbol">$</span> 99.99</p>
           <p class="prices__desc">Unlimited  support<br>Unlimited  support<br>Unlimited  support</p>
-          <button class="btn" type="button">Buy now</button>
+          <button class="btn btn--buy" type="button">Buy now</button>
         </li>
       </ul>
     </div>
