декоративное оформление твиты

--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,7 @@
         <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
       </ul>
 
-      <button class="btn" type="button">Show More</button>
+      <button class="btn btn--show" type="button">Show More</button>
     </div>
   </section>
 
