декоративное оформление скриншоты

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
+
+
   <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
     <symbol id="airplane" width="27.593" height="25.47" viewBox="0 0 27.593 25.47">
       <path d="M933.4,1604.11a0.425,0.425,0,0,0-.446-0.06l-26.774,12.39a0.414,0.414,0,0,0-.238.37,0.419,0.419,0,0,0,.23.38l7.577,3.7a0.415,0.415,0,0,0,.429-0.04l7.367-5.49-5.783,5.93a0.417,0.417,0,0,0-.116.32l0.576,7.47a0.406,0.406,0,0,0,.282.36,0.577,0.577,0,0,0,.129.02,0.42,0.42,0,0,0,.313-0.14l4.021-4.65,4.972,2.37a0.45,0.45,0,0,0,.342.01,0.412,0.412,0,0,0,.229-0.26l7.011-22.24A0.421,0.421,0,0,0,933.4,1604.11Z" transform="translate(-905.938 -1604)"/>
@@ -216,54 +218,54 @@
       <div class="screenshots__frame">
         <ul class="screenshots__list">
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot1.jpg" alt="SoundCloud Screenshot Astrid S">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot1.jpg" alt="SoundCloud Screenshot Astrid S">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot2.jpg" alt="SoundCloud Screenshot #pop">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot2.jpg" alt="SoundCloud Screenshot #pop">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot3.jpg" alt="SoundCloud Screenshot get started">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot3.jpg" alt="SoundCloud Screenshot get started">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot4.jpg" alt="SoundCloud Screenshot Back on road">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot4.jpg" alt="SoundCloud Screenshot Back on road">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot5.jpg" alt="SoundCloud Screenshot playlist">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot5.jpg" alt="SoundCloud Screenshot playlist">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot6.jpg" alt="SoundCloud Screenshot Sia ft Sean Paul">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot6.jpg" alt="SoundCloud Screenshot Sia ft Sean Paul">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot7.jpg" alt="SoundCloud Screenshot Explore">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot7.jpg" alt="SoundCloud Screenshot Explore">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot8.jpg" alt="SoundCloud Screenshot S3RL">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot8.jpg" alt="SoundCloud Screenshot S3RL">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot9.jpg" alt="SoundCloud Screenshot Liked">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot9.jpg" alt="SoundCloud Screenshot Liked">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot10.jpg" alt="SoundCloud Screenshot Kyolo">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot10.jpg" alt="SoundCloud Screenshot Kyolo">
           </li>
 
           <li class="screenshots__item">
-            <img class="screenshots__image" width="241" height="428" src="img/screenshot11.jpg" alt="SoundCloud Screenshot Search">
+            <img class="screenshots__image" width="216" height="384" src="img/screenshot11.jpg" alt="SoundCloud Screenshot Search">
           </li>
         </ul>
       </div>
 
       <div class="screenshots__toggles">
-        <button class="screenshots__toggle screenshots__toggle--prev" type="button">Prev</button>
-        <button class="screenshots__toggle screenshots__toggle--next" type="button">Next</button>
+        <button class="btn btn--prev" type="button">Prev</button>
+        <button class="btn btn--next" type="button">Next</button>
       </div>
     </div>
   </section>
