--- a/src/index.html
+++ b/src/index.html
@@ -275,9 +275,21 @@
     <div class="download__wrapper">
       <h2 class="download__title">Download SoundCloud App</h2>
 
-      <a class="btn btn--app" href="#">App Store</a>
-      <a class="btn btn--app" href="#">Play Store</a>
-      <a class="btn btn--app" href="#">Windows Store</a>
+      <a class="btn btn--app" href="#">App Store
+        <svg class="btn__icon btn__icon--apple" width="18" height="22">
+          <use xlink:href="#apple"></use>
+        </svg>
+      </a>
+      <a class="btn btn--app" href="#">Play Store
+        <svg class="btn__icon btn__icon--android" width="20" height="23">
+          <use xlink:href="#android"></use>
+        </svg>
+      </a>
+      <a class="btn btn--app" href="#">Windows Store
+        <svg class="btn__icon btn__icon--windows" width="17" height="17">
+          <use xlink:href="#windows"></use>
+        </svg>
+      </a>
     </div>
   </section>
 
