мелкие декоративные правки

--- a/src/index.html
+++ b/src/index.html
@@ -203,6 +203,12 @@
         <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
         <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
         <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+        <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+        <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+        <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+        <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+        <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
+        <li class="tweets__item">Hey @chyan_me, thanks for your 'SoundCloud App Navigation Screen' freebie on @MaterialUp! http://www.materialup.com/posts/soundcloud-app-navigation-screen…</li>
       </ul>
 
       <button class="btn btn--show" type="button">Show More</button>
