--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 
 
   <header class="header">
-    <nav class="menu">
+    <nav class="menu menu--show">
       <button class="menu__trigger" type="button">Menu<span></span></button>
 
       <ul class="menu__list">
@@ -281,12 +281,12 @@
     <div class="download__wrapper">
       <h2 class="download__title">Download SoundCloud App</h2>
 
-      <a class="btn btn--app" href="#">App Store
+      <a class="btn btn--app" href="https://itunes.apple.com/us/app/soundcloud-music-audio/id336353151?mt=8">App Store
         <svg class="btn__icon btn__icon--apple" width="18" height="22">
           <use xlink:href="#apple"></use>
         </svg>
       </a>
-      <a class="btn btn--app" href="#">Play Store
+      <a class="btn btn--app" href="https://play.google.com/store/apps/details?id=com.soundcloud.android&hl=en">Play Store
         <svg class="btn__icon btn__icon--android" width="20" height="23">
           <use xlink:href="#android"></use>
         </svg>
@@ -309,17 +309,17 @@
           <use xlink:href="#behance"></use>
         </svg>
       </a>
-      <a class="contacts__link contacts__link--facebook" href="#">
+      <a class="contacts__link contacts__link--facebook" href="https://www.facebook.com/SoundCloud/">
         <svg class="contacts__image" width="15" height="27">
           <use xlink:href="#facebook"></use>
         </svg>
       </a>
-      <a class="contacts__link contacts__link--twitter" href="#">
+      <a class="contacts__link contacts__link--twitter" href="https://twitter.com/soundcloud">
         <svg class="contacts__image" width="30" height="24">
           <use xlink:href="#twitter"></use>
         </svg>
       </a>
-      <a class="contacts__link contacts__link--pinterest" href="#">
+      <a class="contacts__link contacts__link--pinterest" href="https://pinterest.com/soundcloud/">
         <svg class="contacts__image" width="27" height="27">
           <use xlink:href="#pinterest"></use>
         </svg>
