--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 
 
   <header class="header">
-    <nav class="menu menu--show">
+    <nav class="menu">
       <button class="menu__trigger" type="button">Menu<span></span></button>
 
       <ul class="menu__list">
