обязательное поле для подписки и отключение перехвата

--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
       <p class="subscribe__subtitle">No spam promise - only our latest news and freebies!</p>
 
       <form class="subscribe__form" action="#" method="post">
-        <input class="subscribe__email" name="email" type="text" placeholder="your email address">
+        <input class="subscribe__email" name="email" type="text" placeholder="your email address" required>
 
         <button class="btn btn--submit" type="submit">Airplane
           <svg class="subscribe__icon" width="27" height="25">
